add external images to gallery

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -18,8 +18,8 @@
 
 [[main]]
   parent = "gallery"
-  name = "cartoon"
-  url = "gallery/cartoon"
+  name = "Beer Cart"
+  url = "gallery/beer_cart"
 
 [[main]]
   parent = "gallery"
