--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,8 +2,8 @@ logoText = "" # Logo text that appears in the site navigation bar.
 logoType = "short" # long, short -> short: squre shape includes logo text, long: rectangle shape not includes logo text
 logo = true # Logo that appears in the site navigation bar.
 description = "Alex Nackenoff | Neuropharmacologist at Vanderbilt" # for SEO
-custom_css = [] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
-custom_js = [] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
+custom_css = ["css/custom.css", "scss/custom.scss"] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
+custom_js = ["js/custom.js"] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
 useFaviconGenerator = false # https://www.favicon-generator.org/
 languagedir = "ltr" # ltr / rtl
 
@@ -109,6 +109,12 @@ commento = false
   clientId = ""           # Your client ID
   clientSecret = ""       # Your client secret
 
+[staticman]
+  enable = true
+  endpoint = "https://alex-nackenoff-blog-comments.herokuapp.com/v2/entry"
+  username = "alex-nackenoff"
+  repository = "hugo-website"
+  branch = "master"
 # Valine.
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
