update bread post

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -178,7 +178,7 @@ commento = false
   enable = false # if set, the donation button will show up on the single page.
   alipay = "" # Alipay QR Code image (example path: images/donation/alipay-qrcode.png) and put your file at root/static/images/donation/
   wechat = "" # Wechat pay QR Code image (example path: same as above)
-  paypal = "" # Paypal URL
+  paypal = "https://paypal.me/anackenoff" # Paypal URL
   patreon = "" # Patreon URL
   bitcoin = "" # example path: images/donation/bitcoin-code-image.png
 
