--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 logoText = "" # Logo text that appears in the site navigation bar.
 logoType = "short" # long, short -> short: squre shape includes logo text, long: rectangle shape not includes logo text
 logo = true # Logo that appears in the site navigation bar.
-description = "Alex Nackenoff | Neuropharmacologist at Vanderbilt" # for SEO
+description = "Alex Nackenoff | Polymath Hobbyist" # for SEO
 custom_css = ["css/custom.css", "scss/custom.scss"] # custom_css = ["scss/custom.scss"] and then make file at root/assets/scss/custom.scss
 custom_js = ["js/custom.js"] # custom_js = ["js/custom.js"] and then make file at root/assets/js/custom.js
 useFaviconGenerator = false # https://www.favicon-generator.org/
@@ -44,7 +44,7 @@ talksGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
 myname = "Alex Nackenoff"
 email = "alex@alexnackenoff.com"
-whoami = "Neuropharmacologist at Vanderbilt"
+whoami = "Polymath Hobbyist"
 bioImageUrl = "images/profile-circle.png" # image url like "http//..." or "images/anyfoldername/mybioimage.jpg" If not set, we find a avatar image in root/static/images/whoami/avatar.(png|jpg|svg)
 authorImage = "images/profile-circle.png"
 useGravatar = false # we use this option highest priority
@@ -175,12 +175,15 @@ commento = false
   twitch = ""
 
 [donationOptions]
-  enable = false # if set, the donation button will show up on the single page.
+  enable = true # if set, the donation button will show up on the single page.
   alipay = "" # Alipay QR Code image (example path: images/donation/alipay-qrcode.png) and put your file at root/static/images/donation/
   wechat = "" # Wechat pay QR Code image (example path: same as above)
   paypal = "https://paypal.me/anackenoff" # Paypal URL
+  venmo = "images/donation/venmo.png"
   patreon = "" # Patreon URL
-  bitcoin = "" # example path: images/donation/bitcoin-code-image.png
+  bitcoin = "images/donation/bitcoin.jpeg" # example path: images/donation/bitcoin-code-image.png
+  bitcoin-cash = "images/donation/bitcoincash.jpeg" # example path: images/donation/bitcoin-code-image.png
+  ethereum = "images/donation/ethereum.jpeg" # example path: images/donation/bitcoin-code-image.png
 
 [copyrightOptions]
   enableCopyrightLink = false # if set, you can add copyright link
