--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,11 +44,11 @@ talksGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 # whoami: usage - home page sidebar, single page bottom of post. all values can be empty
 myname = "Alex Nackenoff"
 email = "alex@alexnackenoff.com"
-whoami = "Polymath Hobbyist"
+whoami = "Personal Website of Random Food, Tech, and Beer Projects"
 bioImageUrl = "images/profile-circle.png" # image url like "http//..." or "images/anyfoldername/mybioimage.jpg" If not set, we find a avatar image in root/static/images/whoami/avatar.(png|jpg|svg)
 authorImage = "images/profile-circle.png"
 useGravatar = false # we use this option highest priority
-location = "Nashville, TN"
+location = "New York, NY"
 organization = ""
 link = ""
 
