--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -162,7 +162,7 @@ commento = false
   douban = ""
   csdn = ""
   gitlab = ""
-  mastodon = ""
+  mastodon = "https://mastodon.alexnackenoff.com/@alex"
   jianshu = ""
   zhihu = ""
   signal = ""
