--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -153,7 +153,7 @@ commento = false
   youtube = ""
   medium = ""
   tumblr = ""
-  linkedin = "www.linkedin.com/in/anackenoff"
+  linkedin = "https://www.linkedin.com/in/anackenoff"
   pinterest = ""
   stack-exchange = ""
   telegram = ""
