--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,7 +4,7 @@ title = "Alex Nackenoff"
 theme = "zzo"
 
 defaultContentLanguage = "en" # Default language to use (if you setup multilingual)
-defaultContentLanguageInSubdir = true # baseURL/en/, baseURL/kr/ ...
+defaultContentLanguageInSubdir = false # baseURL/en/, baseURL/kr/ ...
 hasCJKLanguage = false # Set `true` for Chinese/Japanese/Korean languages.
 
 summaryLength = 70 # The length of a post description on a list page.
