www base url fix

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://alexnackenoff.com/"
+baseURL = "https://www.alexnackenoff.com/"
 languageCode = "en-us"
 title = "Alex Nackenoff"
 theme = "zzo"
